# chat-git-repo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_env.py  test_cli_chat.py
codechat/: __init__.py  __main__.py  config.py
codechat/embeddings/: __init__.py
codechat/ingestion/: chunker.py  git_loader.py
codechat/interface/: __init__.py  cli.py
codechat/rag/: __init__.py  chain.py
codechat/vectordb/: __init__.py  faiss_store.py
scripts/: smoke_test.bat  smoke_test.sh  smoke_test_win.bat
tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_configuration.py  test_embedder.py  test_faiss_store.py  test_git_loader.py  test_integration.py  test_interface.py
